build: Disable jvm warning in runMindustry tasks